tests/snapshots/run_wpt_conformance__litert_greater_float32_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "greater.https.any.js",
    "greater float32 5D tensors",
    "litert",
    "PASS",
)
